# rustic-calc

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-validation.yml
src/: calculate.rs  input_editor.rs  inspect.rs  io.rs  lib.rs  main.rs  plot.rs  tokenize.rs  tui_app.rs  types.rs  variables.rs
src/widgets/: help_message.rs  history_block.rs  input_area.rs  plot_block.rs  variable_block.rs
tests/: test_calculate.rs  test_cli.rs  test_core.rs  test_input_editor.rs  test_inspect.rs  test_io.rs  test_tokenize.rs  test_tui.rs  test_variables.rs
tests/common/: state.rs  temp_home.rs  with_home.rs
