[package]
name = "rustic-calc"
description = "A TUI calculator based in rust"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
approx = "0.5.1"

[[bin]]
name = "rcalc"
path = "src/main.rs"
